[gd_scene load_steps=6 format=3 uid="uid://bm8wvvxd2ln6j"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_0123"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1"]
animations = [{
"frames": [],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": "walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 4
script = ExtResource("1_0123")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_1")

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
